# EchoHub

./: .dockerignore  .editorconfig  .gitignore  .taplo.toml  Cargo.toml  LICENSE  README.md  bacon.toml  biome.json  compose.yaml  package.json  sample.env
backend/auth-server/: Cargo.toml  Dockerfile  build.rs  sample.env
backend/auth-server/certs/: .gitignore  generate-certs  generate-certs-postman  openssl-postman.cnf  openssl.cnf
backend/auth-server/protos/: auth.proto
backend/auth-server/protos/google/protobuf/: descriptor.proto
backend/auth-server/protos/v1/: auth.proto
backend/auth-server/src/: auth.rs  main.rs  prelude.rs
backend/auth-server/src/api/v1/: auth.rs  mod.rs  oauth2.rs
backend/auth-server/src/core/: db.rs  macros.rs  mod.rs  util.rs
backend/auth-server/src/core/entities/: user.rs
backend/auth-server/src/core/enums/: scope.rs
backend/auth-server/src/requests/: auth.rs
backend/auth-server/src/responses/: auth.rs
backend/auth-server/src/v1/: auth.rs
backend/ca/: generate-ca  openssl.cnf
backend/common/: Cargo.toml
backend/common/src/: lib.rs
backend/common/src/models/: mod.rs  oauth2_authorization_code.rs
backend/common/src/models/db/: mod.rs  users.rs
backend/common/src/utils/: email.rs  generators.rs  mod.rs
backend/entity/: Cargo.toml
backend/entity/src/: lib.rs  oauth2_token_pairs.rs  user.rs  users.rs
backend/gateway-server/: Cargo.toml  Dockerfile  build.rs  sample.env
backend/gateway-server/certs/: generate-client-certs  openssl-client.cnf
backend/gateway-server/src/: main.rs  schema.rs
backend/gateway-server/src/schema/: auth_schema.rs  mod.rs
backend/gateway-server/src/v1/: auth.rs  client.rs
backend/migration/src/: lib.rs  m20250406_110838_create_table.rs  m20250407_172424_create_table.rs  m20250510_150907_create_table_oauth2_token_pair.rs
web/: package.json  svelte.config.js  vite.config.ts
web/.storybook/: preview.ts
web/src/routes/: +layout.svelte  +page.svelte  page.svelte.test.ts
web/src/stories/: Button.stories.svelte  Button.svelte  Header.stories.svelte  Header.svelte  Page.stories.svelte
web/src/styles/: variables.scss
