[package]
name = "auth-server"
version = "0.1.0"
edition = "2024"
description = "Authentication service for a Discord-like chat application using microservices."

[dependencies]
anyhow = "1.0.97"
dotenvy = "0.15.7"
prost = "0.13.5"
sea-orm = { version = "1.1.8", features = [
    "mock",
    "postgres-array",
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "with-json",
    "with-time",
    "with-uuid",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
time = "0.3.41"
tokio = { version = "1.44.1", features = ["full"] }
tonic = { version = "0.13.0", features = ["server", "tls-ring"] }
tonic-reflection = "0.13.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
uuid = "1.16.0"

[build-dependencies]
tonic-build = "0.13.0"
