[package]
name = "auth-server"
version = "0.1.0"
edition = "2024"
description = "Authentication service for a Discord-like chat application using microservices."

[dependencies]
anyhow = "1.0.97"
base64 = "0.22.1"
bcrypt = "0.17.0"
dotenvy = "0.15.7"
entity = { path = "../entity" }
jsonwebtoken = "9.3.1"
lettre = "0.11.16"
migration = { path = "../migration" }
once_cell = "1.21.3"
prost = "0.13.5"
rand = "0.9.0"
sea-orm = { version = "1.1.8", features = [
    "mock",
    "postgres-array",
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "with-json",
    "with-time",
    "with-uuid",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
time = { version = "0.3.41", features = ["local-offset"] }
tokio = { version = "1.44.2", features = ["full"] }
tonic = { version = "0.13.0", features = ["server", "tls-ring"] }
tonic-reflection = "0.13.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
uuid = { version = "1.16.0", features = ["v4", "fast-rng"] }

[build-dependencies]
tonic-build = "0.13.0"
