[package]
name = "auth_server"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.14.1"
time = { version = "0.3.41", features = [
    "local-offset",
    "serde-human-readable",
] }
tonic = { version = "0.13.1", features = ["server", "tls-ring"] }
tonic-health = "0.13.1"
tonic-reflection = "0.13.1"
tonic-types = "0.13.1"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.13.1"
