[package]
name = "entity"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm = { version = "1.1.8", features = [
    "mock",
    "postgres-array",
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "with-json",
    "with-time",
    "with-uuid",
] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
uuid = "1.16.0"
